Added home page changes

--- a/Angular/src/app/header/header.component.html
+++ b/Angular/src/app/header/header.component.html
@@ -53,11 +53,11 @@
                         <!-- Info List -->
                         <ul class="info-list">
                             <li><a href="mailto:hello@consulte.co"><span class="icon icofont-envelope"></span>
-                                    hello@consulte.co</a></li>
+                                sivandu55@gmail.com</a></li>
                             <li><a href="tel:+1212-226-3126"><span class="icon icofont-phone"></span>
-                                    +1212-226-3126</a></li>
-                            <li><a href="contact.html"><span class="icon icofont-clock-time"></span> Mon - Sat: 8.00
-                                    - 17.00, Sunday Closed</a></li>
+                                +91 -8099029010</a></li>
+                            <!-- <li><a href="contact.html"><span class="icon icofont-clock-time"></span> Mon - Sat: 8.00
+                                    - 17.00, Sunday Closed</a></li> -->
                         </ul>
                     </div>
 
@@ -69,8 +69,8 @@
                             <li><a href="https://twitter.com/" class="icofont-twitter"></a></li>
                             <li><a href="http://facebook.com/" class="icofont-facebook"></a></li>
                             <li><a href="https://www.instagram.com/" class="icofont-instagram"></a></li>
-                            <li><a href="https://rss.com/" class="icofont-rss"></a></li>
-                            <li><a href="https://www.youtube.com/" class="icofont-play-alt-1"></a></li>
+                            <!-- <li><a href="https://rss.com/" class="icofont-rss"></a></li>
+                            <li><a href="https://www.youtube.com/" class="icofont-play-alt-1"></a></li> -->
                         </ul>
                     </div>
 
@@ -102,9 +102,10 @@
 
                             <div class="navbar-collapse show collapse clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
-                                    <li class="current"><a href="index.html">Home</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li class="dropdown"><a href="#">Service</a>
+                                    <li class="current"><a [routerLink]="['/home']" routerLinkActive="true">Home</a></li>
+                                    <li><a href="about.html">Income Tax</a></li>
+                                    <li><a href="about.html">GST</a></li>
+                                    <li class="dropdown"><a href="#">Start Up</a>
                                         <ul>
                                             <li><a [routerLink]="['/services']" routerLinkActive="true">Proprietor ship</a></li>
                                             <li><a [routerLink]="['/services']" routerLinkActive="true">Partnership</a></li>
@@ -115,7 +116,9 @@
                                             <li><a [routerLink]="['/services']" routerLinkActive="true">Section 8 Company (NGO)</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown"><a href="#">Projects</a>
+                                    <li><a href="about.html">Other Services</a></li>
+                                    <li><a href="about.html">About</a></li>
+                                    <!-- <li class="dropdown"><a href="#">Projects</a>
                                         <ul>
                                             <li><a href="project.html">Project</a></li>
                                             <li><a href="project-details.html">Project Details</a></li>
@@ -126,7 +129,7 @@
                                             <li><a href="blog.html">Our Blog</a></li>
                                             <li><a href="blog-detail.html">Blog Detail</a></li>
                                         </ul>
-                                    </li>
+                                    </li> -->
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
