--- a/Angular/src/app/main/new-home/new-home.component.html
+++ b/Angular/src/app/main/new-home/new-home.component.html
@@ -1,9 +1,9 @@
 <div class="page-wrapper">
     <!-- Banner Section -->
     <div class="banner-section">
-        <div class="main-slider-carousel owl-carousel owl-theme">
+        <div class="main-slider-carousel owl-carousel owl-theme owl-loaded owl-drag">
 
-            <div class="slide" data-bg-image="../../../assets/images/main-slider/banner1.jpg">
+            <div class="slide">
                 <div class="auto-container w-100">
                     <div class="row clearfix">
 
@@ -138,7 +138,6 @@
                                 </p>
                                 <p>you can trust us to take care of your financial needs accurately.</p>
                             </div>
-                            <div class="signature">Daniel <span>Daniel Jr</span></div>
                         </div>
                     </div>
 
@@ -155,6 +154,7 @@
                 <div class="title">our services</div>
                 <h2><span>Best Solutions</span> For Your Business</h2>
             </div>
+      
             <div class="inner-container">
                 <div class="row g-0">
 
@@ -430,43 +430,6 @@
     </div>
     <!-- End Testimonial Section -->
 
-    <!-- Sponsors Section -->
-    <div class="sponsors-section">
-        <div class="auto-container">
-
-            <div class="carousel-outer">
-                <!--Sponsors Slider-->
-                <ul class="sponsors-carousel owl-carousel owl-theme">
-                    <li>
-                        <div class="image-box"><a href="#"><img src="../../../assets/images/clients/1.png" alt=""></a></div>
-                    </li>
-                    <li>
-                        <div class="image-box"><a href="#"><img src="../../../assets/images/clients/2.png" alt=""></a></div>
-                    </li>
-                    <li>
-                        <div class="image-box"><a href="#"><img src="../../../assets/images/clients/3.png" alt=""></a></div>
-                    </li>
-                    <li>
-                        <div class="image-box"><a href="#"><img src="../../../assets/images/clients/4.png" alt=""></a></div>
-                    </li>
-                    <li>
-                        <div class="image-box"><a href="#"><img src="../../../assets/images/clients/5.png" alt=""></a></div>
-                    </li>
-                    <li>
-                        <div class="image-box"><a href="#"><img src="../../../assets/images/clients/1.png" alt=""></a></div>
-                    </li>
-                    <li>
-                        <div class="image-box"><a href="#"><img src="../../../assets/images/clients/2.png" alt=""></a></div>
-                    </li>
-                    <li>
-                        <div class="image-box"><a href="#"><img src="../../../assets/images/clients/3.png" alt=""></a></div>
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-    </div>
-    <!--End Sponsors Section-->
 
     <!-- Reputation Section Two -->
     <div class="reputation-section-two style-two">
@@ -477,7 +440,7 @@
                 <div class="form-column col-lg-5 col-md-12 col-sm-12">
                     <div class="inner-column">
                         <div class="form-boxed">
-                            <h5>free consulation</h5>
+                            <h5>Need consultation</h5>
 
                             <div class="consult-form">
                                 <form method="post"
@@ -495,7 +458,7 @@
                                             placeholder="Enter your phone number" required>
                                     </div>
                                     <!--Form Group-->
-                                    <div class="form-group">
+                                    <!-- <div class="form-group">
                                         <label>topics</label>
                                         <select class="custom-select-box">
                                             <option>Choose topic</option>
@@ -504,7 +467,7 @@
                                             <option>Topic 03</option>
                                             <option>Topic 04</option>
                                         </select>
-                                    </div>
+                                    </div> -->
                                     <!--Form Group-->
                                     <div class="form-group">
                                         <label>message</label>
