--- a/Angular/src/app/footer/footer.component.html
+++ b/Angular/src/app/footer/footer.component.html
@@ -86,8 +86,8 @@
                                 </div>
                                 <div class="call">
                                     Call us directly
-                                    <a class="phone" href="tel:+1-212-226-3126">+1 212-226-3126</a>
-                                    <a class="email" href="mailto:hello@consulte.co">hello@consulte.co</a>
+                                    <a class="phone" href="tel:+1-212-226-3126">+91-8099029010</a>
+                                    <a class="email" href="mailto:hello@consulte.co">sivandu55@gmail.com</a>
                                 </div>
                             </div>
                         </div>
@@ -136,7 +136,7 @@
                                 <!-- Newsletter Form -->
                                 <div class="newsletter-form">
                                     <form method="post"
-                                        action="https://htmldemo.hasthemes.com/consultix/consultix/contact.html">
+                                        action="">
                                         <div class="form-group">
                                             <input type="email" name="email" value=""
                                                 placeholder="Email Address..." required>
@@ -155,13 +155,13 @@
         </div>
 
         <!-- Footer Bottom -->
-        <div class="footer-bottom">
+        <!-- <div class="footer-bottom">
             <div class="auto-container">
                 <div class="bottom-inner">
                     <div class="row clearfix">
 
                         <div class="col-lg-8 col-md-12 col-sm-12">
-                            <div class="copyright">© 2021 <strong>Consultix</strong> Made with <i
+                            <div class="copyright">© 2021 <strong></strong> Made with <i
                                     class="icon-heart text-danger" aria-hidden="true"></i> by <a
                                     href="https://hasthemes.com/" target="_blank">HasThemes</a></div>
                         </div>
@@ -179,7 +179,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
 </footer>
