--- a/Angular/src/app/main/new-services/new-services.component.html
+++ b/Angular/src/app/main/new-services/new-services.component.html
@@ -1,7 +1,7 @@
 <div class="page-wrapper">
  		
 	<!-- Service Banner Section -->
-    <div class="service-banner-section" data-bg-image="images/background/service-bg.jpg">
+    <div class="service-banner-section" data-bg-image="assets/images/background/service-bg.jpg">
 		<div class="auto-container">
 			<div class="content-box">
 				<h2>Our <span>Services</span></h2>
@@ -26,6 +26,81 @@
 		</div>
 	</div>
 	<!-- End Service Banner Section -->
+	<section>
+		<div class="services-section section-padding reputation-section-two style-two">
+					<div class="auto-container">
+						<div class="row clearfix">
+							<div class="col-lg-7">
+								<div class="sec-title">
+									<div class="title">Social Media Markenting</div>
+									<h2><span>Sloving Business</span> For Your Business</h2>
+									<p>Capitalise on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional base clickthroughs.</p>
+								</div>
+								<div class="row">
+										<div class="col-md-6">
+										<ul class="check-list">
+											<li><i class="icofont-check"></i>Head</li>
+											<li> <i class="icofont-check"></i>Shoulders</li>
+											<li> <i class="icofont-check"></i>Knees</li>
+											<li><i class="icofont-check"></i>Toes</li>
+										  </ul>
+										</div>
+										<div class="col-md-6">
+											<ul class="check-list">
+												<li><i class="icofont-check"></i>Head</li>
+												<li> <i class="icofont-check"></i>Shoulders</li>
+												<li> <i class="icofont-check"></i>Knees</li>
+												<li><i class="icofont-check"></i>Toes</li>
+											  </ul>
+											</div>
+									
+								</div>
+							</div>
+							<!-- Form Column -->
+				<div class="form-column col-lg-5 col-md-12 col-sm-12">
+					<div class="inner-column">
+						<div class="form-boxed">
+							<h5>free consulation</h5>
+							
+							<div class="consult-form">
+								<form method="post" action="https://htmldemo.hasthemes.com/consultix/consultix/donate.html">
+
+									<!--Form Group-->
+									<div class="form-group">
+										<label>full name</label>
+										<input type="text" name="name" value="" placeholder="Jason Staham" required>
+									</div>
+									<!--Form Group-->
+									<div class="form-group">
+										<label>phone number</label>
+										<input type="text" name="phone" value="" placeholder="Enter your phone number" required>
+									</div>
+									<!--Form Group-->
+									<div class="form-group">
+										<label>topics</label>
+										<select class="custom-select-box">
+											<option>Choose topic</option>
+											<option>Topic 01</option>
+											<option>Topic 02</option>
+											<option>Topic 03</option>
+											<option>Topic 04</option>
+										</select>
+									</div>
+									<div class="text-center mt-4 mb-4">
+										<button class=" btn-style-one" type="submit" name="submit-form"><span class="txt">send your messenger</span></button>
+									</div>
+								</form>
+							
+							</div>
+						</div>
+						
+					</div>
+				</div>
+						</div>
+						
+				</div>
+			</div>
+	</section>
 	
 	<!-- Services Section -->
 	<div class="services-section section-padding">
@@ -139,7 +214,87 @@
 		</div>
 	</div>
 	<!-- End Services Section -->
-	
+	<section class="pricing-section">
+        <div class="container">
+            <div class="sec-title text-center">
+                <span class="title">Get plan</span>
+                <h2>Choose a Plan</h2>
+            </div>
+
+            <div class="outer-box">
+                <div class="row">
+                    <!-- Pricing Block -->
+                    <div class="pricing-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                        <div class="inner-box">
+                            <div class="icon-box">
+                                <div class="icon-outer"><i class="fas fa-paper-plane"></i></div>
+                            </div>
+                            <div class="price-box">
+                                <div class="title"> Day Pass</div>
+                                <h4 class="price">$35.99</h4>
+                            </div>
+                            <ul class="features">
+                                <li class="true">Conference plans</li>
+                                <li class="true">Free Lunch And Coffee</li>
+                                <li class="true">Certificate</li>
+                                <li class="false">Easy Access</li>
+                                <li class="false">Free Contacts</li>
+                            </ul>
+                            <div class="btn-box">
+                                <a href="https://codepen.io/anupkumar92" class="theme-btn">BUY plan</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Pricing Block -->
+                    <div class="pricing-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
+                        <div class="inner-box">
+                            <div class="icon-box">
+                                <div class="icon-outer"><i class="fas fa-gem"></i></div>
+                            </div>
+                            <div class="price-box">
+                                <div class="title">Full Pass</div>
+                                <h4 class="price">$99.99</h4>
+                            </div>
+                            <ul class="features">
+                                <li class="true">Conference plans</li>
+                                <li class="true">Free Lunch And Coffee</li>
+                                <li class="true">Certificate</li>
+                                <li class="true">Easy Access</li>
+                                <li class="false">Free Contacts</li>
+                            </ul>
+                            <div class="btn-box">
+                                <a href="https://codepen.io/anupkumar92" class="theme-btn">BUY plan</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Pricing Block -->
+                    <div class="pricing-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="800ms">
+                        <div class="inner-box">
+                            <div class="icon-box">
+                                <div class="icon-outer"><i class="fas fa-rocket"></i></div>
+                            </div>
+                            <div class="price-box">
+                                <div class="title">Group Pass</div>
+                                <h4 class="price">$199.99</h4>
+                            </div>
+                            <ul class="features">
+                                <li class="true">Conference plans</li>
+                                <li class="true">Free Lunch And Coffee</li>
+                                <li class="true">Certificate</li>
+                                <li class="true">Easy Access</li>
+                                <li class="true">Free Contacts</li>
+                            </ul>
+                            <div class="btn-box">
+                                <a href="https://codepen.io/anupkumar92" class="theme-btn">BUY plan</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 	<!-- Reputation Section Two -->
 	<div class="reputation-section-two style-two">
 		<div class="auto-container">
@@ -295,14 +450,14 @@
 			<div class="carousel-outer">
                 <!--Sponsors Slider-->
                 <ul class="sponsors-carousel owl-carousel owl-theme">
-                    <li><div class="image-box"><a href="#"><img src="images/clients/1.png" alt=""></a></div></li>
-                    <li><div class="image-box"><a href="#"><img src="images/clients/2.png" alt=""></a></div></li>
-                    <li><div class="image-box"><a href="#"><img src="images/clients/3.png" alt=""></a></div></li>
-                    <li><div class="image-box"><a href="#"><img src="images/clients/4.png" alt=""></a></div></li>
-					<li><div class="image-box"><a href="#"><img src="images/clients/5.png" alt=""></a></div></li>
-                    <li><div class="image-box"><a href="#"><img src="images/clients/1.png" alt=""></a></div></li>
-                    <li><div class="image-box"><a href="#"><img src="images/clients/2.png" alt=""></a></div></li>
-                    <li><div class="image-box"><a><img src="images/clients/3.png" alt=""></a></div></li>
+                    <li><div class="image-box"><a href="#"><img src="assets/images/clients/1.png" alt=""></a></div></li>
+                    <li><div class="image-box"><a href="#"><img src="assets/images/clients/2.png" alt=""></a></div></li>
+                    <li><div class="image-box"><a href="#"><img src="assets/images/clients/3.png" alt=""></a></div></li>
+                    <li><div class="image-box"><a href="#"><img src="assets/images/clients/4.png" alt=""></a></div></li>
+					<li><div class="image-box"><a href="#"><img src="assets/images/clients/5.png" alt=""></a></div></li>
+                    <li><div class="image-box"><a href="#"><img src="assets/images/clients/1.png" alt=""></a></div></li>
+                    <li><div class="image-box"><a href="#"><img src="assets/images/clients/2.png" alt=""></a></div></li>
+                    <li><div class="image-box"><a><img src="assets/images/clients/3.png" alt=""></a></div></li>
                 </ul>
             </div>
 			
