Added new design changes

--- a/Angular/src/app/main/home/home.component.html
+++ b/Angular/src/app/main/home/home.component.html
@@ -34,7 +34,7 @@
                 <div class="need-help">
                     <div class="header-div text-vision">
                         <a href="javascript:void(0)" class="main_headingbox"
-                            (click)="readMore(service)">{{service.title}}</a>
+                            (click)="onUpdateServices(service)">{{service.title}}</a>
                         <div class="sub_headingbox">{{service.description}}</div>
                     </div>
                     <button type="button" class="btn btn-primary mt-4">
